--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="sanjeevi">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OBJECTIVE</title>
@@ -18,7 +19,7 @@
                 <p class="para">To take a role as Front End Web Developer in a  technical company where I could utilize my skills in  Front-End Web Development and use my skills to providing quality service to the company</p>
             </div>
         </div>
-    
     </div>
+    
 </body>
 </html>
